--- a/style.css
+++ b/style.css
@@ -5,18 +5,23 @@ body{
 h1{
     font-size: 50px; 
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
 .p1{
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", Times, serif; 
   }
-  section{
+  .flexible-container{
       display: flex;
+      margin-bottom: 100px;
   }
   .half-width{
       width: 50%;
       padding-left: 6%;
+      
   }
   .half-width img{
       width: 85%;
@@ -32,4 +37,35 @@ h1{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.exprience-area{
+    background-image: url(images/exp-bg.png);
+    background-position: left;
+    background-repeat: no-repeat;
+}
+.exprience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: gray 10px 10px 40px;
+    padding-left: 20px;
+    border-radius: 12px;
+    border-left: 10px solid;}
+    #web-dev-exprience{
+        border-left: 7px solid;
+        border-image: linear-gradient(blue ,Darkgrey);
+        border-image-slice: 1;
+    }
+    #ful-stack-experience{
+        border-left: 7px solid;
+        border-image: linear-gradient(Darkgrey ,blue);
+        border-image-slice: 1;
+    }
+footer p {
+    text-align: center;
 }
