--- a/style.css
+++ b/style.css
@@ -1,71 +1,100 @@
-body{
+body {
     font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
 }
-h1{
-    font-size: 50px; 
+
+h1 {
+    font-size: 50px;
 }
-h2{
+
+h2 {
     font-size: 40px;
 }
-.orange-color{
+
+.orange-color {
     color: orange;
 }
-.p1{
-    font-family: "Times New Roman", Times, serif; 
-  }
-  .flexible-container{
-      display: flex;
-      margin-bottom: 100px;
-  }
-  .half-width{
-      width: 50%;
-      padding-left: 6%;
-      
-  }
-  .half-width img{
-      width: 85%;
-  }
+
+.p1 {
+    font-family: "Times New Roman", Times, serif;
+}
+
+#dream {
+    width: 65%;
+    margin-left: 30px;
+}
+
+#dream h2 {
+    margin-top: -30px;
+}
+
+.flexible-container {
+    display: flex;
+    margin-bottom: 100px;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 6%;
+
+}
+
+.half-width img {
+    width: 85%;
+}
+
 .link-button {
     text-decoration: none;
-    background-image: linear-gradient(Darkgreen, olive);
-    color:white;
+    background-image: linear-gradient(to right, rgb(11, 156, 149), rgb(70, 184, 41));
+    color: white;
     padding: 10px 40px;
     font-weight: 700;
     border-radius: 5px;
 }
-.top-banner{
+
+.top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
-.dream-big{
+
+.dream-big {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
-.exprience-area{
+
+.exprience-area {
     background-image: url(images/exp-bg.png);
     background-position: left;
     background-repeat: no-repeat;
 }
-.exprience-item{
+
+.exprience-h1 {
+    margin-left: 5%;
+}
+
+.exprience-item {
     width: 40%;
     margin-left: 5%;
     margin-right: 5%;
     box-shadow: gray 10px 10px 40px;
     padding-left: 20px;
     border-radius: 12px;
-    border-left: 10px solid;}
-    #web-dev-exprience{
-        border-left: 7px solid;
-        border-image: linear-gradient(blue ,Darkgrey);
-        border-image-slice: 1;
-    }
-    #ful-stack-experience{
-        border-left: 7px solid;
-        border-image: linear-gradient(Darkgrey ,blue);
-        border-image-slice: 1;
-    }
+    border-left: 10px solid;
+}
+
+#web-dev-exprience {
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(245, 148, 4), rgb(17, 243, 243));
+    border-image-slice: 1;
+}
+
+#ful-stack-experience {
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(17, 243, 243), rgb(245, 148, 4));
+    border-image-slice: 1;
+}
+
 footer p {
     text-align: center;
 }
